update location in firstform.html

--- a/src/components/firstform/firstform.html
+++ b/src/components/firstform/firstform.html
@@ -23,18 +23,15 @@
             <ion-input [(ngModel)]="sn1p2.A5" formControlName="A5" type="text" placeholder="เลขที่บ้าน/อาคาร"></ion-input>
         </ion-item>
         <p id="error" *ngIf="!WaterCensus1Form.controls.A5.valid &&  notValid" danger padding-left>กรุณากรอกข้อมูล เลขที่บ้าน/อาคาร ให้ถูกต้อง</p>
-        <ion-item>
+        <ion-item *ngIf="sn1p2.A6!=null && sn1p2.A7!=null">
 
             <ion-label>ละติจูด:</ion-label>
 
             <ion-label>{{sn1p2.A6}}</ion-label>
-        </ion-item>
-        <ion-item>
 
             <ion-label>ลองจิจูด:</ion-label>
 
             <ion-label>{{sn1p2.A7}}</ion-label>
-
         </ion-item>
         <button ion-button (click)="loadMap()">เปลี่ยนเป็นตำแหน่งปัจจุบัน</button>
         <ion-item>
